Fixed shimmer loading width on small devices

--- a/src/scss/responsive.scss
+++ b/src/scss/responsive.scss
@@ -21,6 +21,15 @@
       font-size: 11px;
     }
   }
+  body:not(.loaded) {
+    .shimmer-loader {
+      &.w25,
+      &.w50,
+      &.w75 {
+        width: 100%;
+      }
+    }
+  }
 }
 
 @media (max-width: 1500px) {
